--- a/package.json
+++ b/package.json
@@ -6,16 +6,25 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^1.2.2",
+    "js-cookie": "^3.0.1",
+    "keen-slider": "^6.8.5",
     "next": "latest",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "stripe": "^11.6.0"
   },
   "devDependencies": {
+    "@rocketseat/eslint-config": "^1.1.3",
+    "@types/js-cookie": "^3.0.2",
     "@types/node": "18.11.3",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
     "autoprefixer": "^10.4.12",
     "postcss": "^8.4.18",
+    "postcss-import": "^15.1.0",
+    "postcss-nested": "^6.0.0",
+    "sass": "^1.57.1",
     "tailwindcss": "^3.2.4",
     "typescript": "4.9.4"
   }
